--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-./target/*
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,terraform
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,macos,terraform
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,terraform,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,terraform,macos
 
 ### macOS ###
 # General
@@ -10,8 +9,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 
 # Thumbnails
 ._*
@@ -73,7 +71,12 @@ override.tf.json
 terraform.rc
 
 ### VisualStudioCode ###
-.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
 .history/
@@ -86,9 +89,12 @@ terraform.rc
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,terraform
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,terraform,macos
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+
 .vscode/
 .idea/
 *.pem
+
+terraform/.terraform.lock.hcl
